Shenandoah: compiler/arraycopy/TestDefaultMethodArrayCloneDeoptC2 fails

XMLWordPrintable

    • b17

      Fails only with Shenandoah, need to see what is up there.

      $ CONF=linux-x86_64-server-fastdebug make images test TEST=compiler/arraycopy/TestDefaultMethodArrayCloneDeoptC2.java TEST_VM_OPTS="-XX:+UnlockExperimentalVMOptions -XX:+UseShenandoahGC"

      STDOUT:
      CompileCommand: compileonly *TestDefaultMethodArrayCloneDeoptC2Interface.test
      WB error: failed to blocking compile at level 4 method compiler.arraycopy.TestDefaultMethodArrayCloneDeoptC2Interface::test
      STDERR:
      java.lang.Exception: Method should be compiled
      at compiler.arraycopy.TestDefaultMethodArrayCloneDeoptC2.testIntfArr(TestDefaultMethodArrayCloneDeoptC2.java:93)
      at compiler.arraycopy.TestDefaultMethodArrayCloneDeoptC2.main(TestDefaultMethodArrayCloneDeoptC2.java:66)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
      at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
      at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
      at java.base/java.lang.reflect.Method.invoke(Method.java:564)
      at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
      at java.base/java.lang.Thread.run(Thread.java:830)

      JavaTest Message: Test threw exception: java.lang.Exception: Method should be compiled
      JavaTest Message: shutting down test

            Assignee:
            Roman Kennke
            Reporter:
            Aleksey Shipilev
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: